// file: proto/gcommon/v1/metrics/v1/record_metrics_request.proto
// version: 1.0.0
// guid: a9b8c7d6-e5f4-3210-9876-543210abcdef

edition = "2023";

package metrics.v1;

import "common/v1/request_metadata.proto";
import "metrics/v1/metric_data.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/metrics/";

/**
 * RecordMetricsRequest represents a batch request to record multiple metrics.
 */
message RecordMetricsRequest {
  // Standard request metadata (tracing, auth, etc.)
  common.v1.RequestMetadata metadata = 1;

  // Batch of metrics to record
  repeated MetricData metrics = 2 [(buf.validate.field).repeated.min_items = 1];

  // Whether to validate all metrics before recording any
  bool atomic = 3;

  // Optional batch ID for tracking
  string batch_id = 4 [(buf.validate.field).string.min_len = 1];

  // Maximum number of retries for failed metrics
  int32 max_retries = 5 [(buf.validate.field).int32.gte = 0];
}
