// file: proto/gcommon/v1/metrics/v1/metrics_service.proto
// version: 1.1.1
// guid: f1g2h3i4-j5k6-7890-l1m2-n3o4p5q6r7s8

edition = "2023";

package metrics.v1;

import "metricspb/v1/get_metric_metadata_request.proto";
import "metricspb/v1/get_metric_metadata_response.proto";
import "metricspb/v1/get_metrics_request.proto";
import "metricspb/v1/get_metrics_response.proto";
import "metricspb/v1/get_metrics_summary_request.proto";
import "metricspb/v1/get_metrics_summary_response.proto";
import "metricspb/v1/metric_data.proto";
import "metricspb/v1/query_metrics_request.proto";
import "metricspb/v1/query_metrics_response.proto";
import "metricspb/v1/record_metric_request.proto";
import "metricspb/v1/record_metric_response.proto";
import "metricspb/v1/record_metrics_request.proto";
import "metricspb/v1/record_metrics_response.proto";
import "metricspb/v1/register_metric_request.proto";
import "metricspb/v1/register_metric_response.proto";
import "metricspb/v1/stream_metrics_request.proto";
import "metricspb/v1/unregister_metric_request.proto";
import "metricspb/v1/unregister_metric_response.proto";
import "google/protobuf/go_features.proto";

// Import response messages

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metricspb";

/**
 * MetricsService provides comprehensive metrics collection and querying capabilities.
 * Supports counters, gauges, histograms, streaming, and custom metrics aggregation.
 */
service MetricsService {
  // Record a single metric data point
  rpc RecordMetric(RecordMetricRequest) returns (RecordMetricResponse);

  // Record multiple metrics in batch for efficiency
  rpc RecordBatchMetrics(RecordMetricsRequest) returns (RecordMetricsResponse);

  // Retrieve metrics data with filtering and aggregation
  rpc GetMetrics(MetricsGetMetricsRequest) returns (MetricsGetMetricsResponse);

  // Stream real-time metrics data with configurable filters and options
  rpc StreamMetrics(MetricsStreamMetricsRequest) returns (stream MetricData);

  // Register a new metric definition
  rpc RegisterMetric(RegisterMetricRequest) returns (RegisterMetricResponse);

  // Unregister an existing metric
  rpc UnregisterMetric(UnregisterMetricRequest) returns (UnregisterMetricResponse);

  // Get metadata for a specific metric
  rpc GetMetricMetadata(GetMetricMetadataRequest) returns (GetMetricMetadataResponse);

  // Query metrics data using complex query expressions
  rpc QueryMetrics(QueryMetricsRequest) returns (QueryMetricsResponse);

  // Get summary statistics about metrics
  rpc GetMetricsSummary(GetMetricsSummaryRequest) returns (GetMetricsSummaryResponse);
}
