// file: pkg/metrics/proto/responses/get_metric_metadata_response.proto
// file: metrics/proto/responses/get_metric_metadata_response.proto
//
// Response definitions for metrics module
// TODO: Implement actual protobuf definitions
//
edition = "2023";

package gcommon.v1.metrics;

import "pkg/metrics/proto/metric_metadata.proto";
import "pkg/common/proto/error.proto";
import "google/protobuf/timestamp.proto";
import "pkg/metrics/proto/pagination_info.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto";

/**
 * GetMetricMetadataResponse contains metadata for requested metrics.
 */
message GetMetricMetadataResponse {
  // Success status of the operation
  bool success = 1;

  // Error information if the operation failed
  gcommon.v1.common.Error error = 2;

  // Provider ID that handled the request
  string provider_id = 3;

  // Retrieved metadata entries
  repeated MetricMetadata metadata = 4;

  // Pagination information
  PaginationInfo pagination = 5;

  // Total number of matching metrics
  int64 total_count = 6;

  // When the response was generated
  google.protobuf.Timestamp generated_at = 7;

  // Warnings or informational messages
  repeated string warnings = 8;

  // Query execution time in milliseconds
  int64 execution_time_ms = 9;
}
