// file: proto/gcommon/v1/metrics/v1/metric_data.proto
// version: 1.0.0
// guid: f9fcef53-3bbb-4860-9b50-b0a96ba93bd0

edition = "2023";

package gcommon.v1.metrics;

import "gcommon/v1/metrics/enums/metric_type.proto";
import "gcommon/v1/metrics/messages/metric_value.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "v1/metrics";

message MetricData {
  // Unique identifier for this metric
  string metric_id = 1;

  // Metric name (e.g., "http_requests_total", "cpu_usage_percent")
  string name = 2;

  // Type of metric (counter, gauge, histogram, etc.)
  MetricsMetricType type = 3;

  // Human-readable description of the metric
  string description = 4;

  // Unit of measurement (e.g., "bytes", "seconds", "requests")
  string unit = 5;

  // Base labels/tags that apply to all values in this metric
  map<string, string> labels = 6;

  // The metric values (can be multiple for time series)
  repeated MetricValue values = 7;

  // When this metric data was collected/created
  google.protobuf.Timestamp created_at = 8;

  // Source system or component that generated this metric
  string source = 9;

  // Namespace or service this metric belongs to
  string namespace = 10;

  // Version of the metric schema/definition
  string schema_version = 11;
}
