// file: proto/gcommon/v1/metrics/v1/register_metric_response.proto
// version: 1.0.0
// guid: 9cd957ab-069a-4d91-bd48-c466a7a29eb0

edition = "2023";

package gcommon.v1.metrics;

import "gcommon/v1/common/messages/error.proto";
import "gcommon/v1/metrics/messages/registration_result.proto";
import "gcommon/v1/metrics/messages/registration_validation.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "v1/metrics";

message RegisterMetricResponse {
  // Success status of the registration
  bool success = 1;

  // Error information if registration failed
  gcommon.v1.common.Error error = 2;

  // Unique ID assigned to the registered metric
  string metric_id = 3;

  // Name of the registered metric
  string metric_name = 4;

  // When the metric was registered
  google.protobuf.Timestamp registered_at = 5;

  // Provider that handled the registration
  string provider_id = 6;

  // Validation results from the registration process
  RegistrationValidation validation = 7;

  // Information about what was created/updated
  RegistrationResult result = 8;

  // Warnings or informational messages
  repeated string warnings = 9;

  // Whether this replaced an existing metric
  bool replaced_existing = 10;
}
