// file: proto/gcommon/v1/metrics/v1/metric_definition.proto
// version: 1.0.0
// guid: 4368bdba-c3ff-4d80-bfa1-886b807d497b

edition = "2023";

package gcommon.v1.metrics.v1;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/metrics/config/export_config.proto";
import "proto/gcommon/v1/metrics/messages/label_definition.proto";
import "proto/gcommon/v1/metrics/enums/metric_type.proto";
import "proto/gcommon/v1/metrics/types/metric_type_config.proto";
import "proto/gcommon/v1/metrics/config/retention_policy_config.proto";
import "proto/gcommon/v1/metrics/messages/validation_rules.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.metrics.v1";

message MetricDefinition {
  // Unique name for the metric
  string name = 1;

  // Type of metric (counter, gauge, histogram, etc.)
  MetricsMetricType type = 2;

  // Human-readable description
  string description = 3;

  // Unit of measurement (e.g., "bytes", "requests", "seconds")
  string unit = 4;

  // Labels that this metric supports
  repeated LabelDefinition labels = 5;

  // Metric-specific configuration
  MetricTypeConfig config = 6;

  // Retention policy for this metric
  RetentionPolicyConfig retention = 7;

  // Export configuration for this metric
  ExportConfig export_config = 8;

  // Validation rules for metric values
  ValidationRules validation = 9;

  // Tags for metric organization and discovery
  map<string, string> tags = 10;
}
