// file: proto/gcommon/v1/metrics/v1/record_metric_request.proto
// version: 1.0.0
// guid: 8e0ace8f-cfd2-45c0-9e30-47eefe47b60f

edition = "2023";

package gcommon.v1.metrics.v1;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "proto/gcommon/v1/common/types/request_metadata.proto";
import "proto/gcommon/v1/metrics/messages/batch_context.proto";
import "proto/gcommon/v1/metrics/messages/metric_data.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.metrics.v1";

message RecordMetricRequest {
  // Standard request metadata (tracing, auth, etc.)
  gcommon.v1.common.RequestMetadata metadata = 1;

  // The metric data to record
  MetricData metric = 2;

  // Optional provider ID to use for recording
  string provider_id = 3;

  // Whether to validate the metric before recording
  bool validate = 4;

  // Timestamp override (if not provided, current time is used)
  google.protobuf.Timestamp timestamp = 5;

  // Batch context information (if this is part of a batch operation)
  BatchContext batch_context = 6;
}
